2005-08-23  Not Zed  <NotZed@Ximian.com>

	* e-shell-window-commands.c: include missing e-error.h

	* e-component-registry.c (query_components): cast away a seemingly
	spurious warning.

2005-08-17  Not Zed  <NotZed@Ximian.com>

	* e-shell.c (impl_Shell_handleURI): fix warning.
	(impl_Shell_findComponent): fix signature for warning.

2005-08-16  Not Zed  <NotZed@Ximian.com>

	** See bug #312668.

	* e-shell.c (set_line_status, set_line_status_complete)
	(set_line_status_finished): new code to set componetns on/offline.
	(e_shell_go_online, e_shell_go_offline): use new interface.
	(offline_procedure_started_cb, offline_procedure_finished_cb): removed.
	(impl_dispose): cleanup line status listener.
	(e_shell_init): setup line status listener.

	* evolution-listener.[ch]: skeleton listener object for new
	setlinestatus call.

	* Evolution-Offline.idl, e-shell-offline-handler.[ch]: killed.  We
	just add a single interface on EvolutionComponent now, much
	simpler.

2005-08-15  Christian Kellner  <gicmo@gnome.org>

	* Makefile.am: Install missing e-plugin header es-event.h
	and es-menu.h.
	Fixes bug #313585.

2005-08-10  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Use privsolib instead of privlib. Link with
	SHELL_LIBS. Use NO_UNDEFINED. Use EXEEXT. Use hack to workaround
	MSYS feature on Win32 when installing the schemas.
	(INCLUDES): Define EVOLUTION_IMAGESDIR like in
	../e-util/e-util-private.h, not EVOLUTION_IMAGES.
	(idl_defines): Pass marker macro to IDL compiler, see below.

	* Evolution-Component.idl: Don't generate duplicate code in skels
	and stubs when including this file from other idl files (in
	particular, ../mail/Evolution-Mail.idl). Use the include_defs and
	inhibit pragmas unless IDL-compiling in this directory. See
	lists.ximian.com/pipermail/evolution-patches/2005-June/010899.html

	* e-shell-utils.c
	* e-shell-windows.c: Ue EVOLUTION_IMAGESDIR in such a way that it
	works even when it is a function call.

2005-08-10  Not Zed  <NotZed@Ximian.com>
