@@ -151,17 +151,19 @@ static const char *authors[] = {
 	"Akira TAGOH",
 	"Alastair McKinstry",
 	"Alastair Tse",
+	"Alexander Shopov",
 	"Alex Graveley",
 	"Alex Jiang",
-	"Alexander Shopov",
 	"Alfred Peng",
 	"Ali Abdin",
 	"Almer S. Tigelaar",
+	"Amish",	
+	"A Nagappan",
 	"Anders Carlsson",
-	"Andre Klapper",
 	"Andrea Campi",
 	"Andreas Hyden",
 	"Andreas J. Guelzow",
+	"Andre Klapper",
 	"Andrew T. Veliath",
 	"Andrew Wu",
 	"Ankit Patel",
@@ -172,6 +174,7 @@ static const char *authors[] = {
 	"Ariel Rios",
 	"Arik Devens",
 	"Arturo Espinosa Aldama",
+	"Arunprakash",
 	"Bastien Nocera",
 	"Benjamin Kahn",
 	"Bertrand Guiheneuf",
@@ -183,9 +186,10 @@ static const char *authors[] = {
 	"Bruce Tao",
 	"Calvin Liu",
 	"Cantona Su",
-	"Carl Sun",
 	"Carlos Garnacho Parro",
 	"Carlos Perell\xC3\xB3" " Mar\xC3\xAD" "n",
+	"Carl Sun",
+	"Carsten Guenther",
 	"Carsten Schaar",
 	"Changwoo Ryu",
 	"Charles Zhang",
@@ -193,7 +197,6 @@ static const char *authors[] = {
 	"Chenthill Palanisamy",
 	"Chris Lahey",
 	"Chris Phelps",
-	"Chris Toshok",
 	"Christian Hammond",
 	"Christian Kellner",
 	"Christian Kreibich",
@@ -203,16 +206,17 @@ static const char *authors[] = {
 	"Christopher Blizzard",
 	"Christopher J. Lahey",
 	"Christopher R. Gabriel",
+	"Chris Toshok",
 	"Clifford R. Conover",
 	"Cody Russell",
 	"Craig Small",
 	"Dafydd Harries",
 	"Damon Chaplin",
 	"Dan Berger",
-	"Dan Winship",
 	"Daniel Veillard",
 	"Daniel Yacob",
 	"Danilo \xC5\xA0" "egan",
+	"Dan Winship",
 	"Darin Adler",
 	"Dave Camp",
 	"Dave Fallon",
@@ -225,10 +229,10 @@ static const char *authors[] = {
 	"Diego Gonzalez",
 	"Diego Sevilla Ruiz",
 	"Dietmar Maurer",
+	"Dinesh Layek",
 	"Dmitry Mastrukov",
 	"Duarte Loreto",
 	"Duncan Mak",
-	"ERDI Gergo",
 	"Ed Catmur",
 	"Edd Dumbill",
 	"Edgar Luna Díaz",
@@ -237,6 +241,7 @@ static const char *authors[] = {
 	"Elliot Turner",
 	"Eneko Lacunza",
 	"Enver ALTIN",
+	"ERDI Gergo",
 	"Eric Busboom",
 	"Eric Zhao",
 	"Eskil Heyn Olsen",
@@ -246,14 +251,15 @@ static const char *authors[] = {
 	"Federico Mena Quintero",
 	"Fernando Herrera",
 	"Francisco Javier F. Serrador",
+	"Francisco Javier F. Serrador",
 	"Frank Belew",
 	"Frederic Crozat",
 	"Gareth Owen",
 	"Gary Ekker",
 	"Gediminas Paulauskas",
 	"Gerardo Marin",
-	"Gil Osher",
 	"Gilbert Fang",
+	"Gil Osher",
 	"Grahame Bowland",
 	"Greg Hudson",
 	"Gregory Leblanc",
@@ -261,8 +267,6 @@ static const char *authors[] = {
 	"Grzegorz Goawski",
 	"Gustavo Gir\xC3\x8E" "ldez",
 	"Gustavo Maciel Dias Vieira",
-	"H P Nadig",
-	"H\xC3\xA9" "ctor Garc\xC3\xAD" "a \xC3\x81" "lvarez",
 	"Hans Petter Jansson",
 	"Hao Sheng",
 	"Hari Prasad Nadig",
@@ -272,14 +276,13 @@ static const char *authors[] = {
 	"Havoc Pennington",
 	"Heath Harrelson",
 	"Herbert V. Riedel",
+	"H P Nadig",
+	"H\xC3\xA9" "ctor Garc\xC3\xAD" "a \xC3\x81" "lvarez",
 	"Iain Holmes",
 	"Ian Campbell",
 	"Ismael Olea",
 	"Israel Escalante",
 	"Iv\xEF\xBF\xBD" "n Frade",
-	"J.H.M. Dassen (Ray)",
-	"JP Rosevear",
-	"J\xC3\xBC" "rg Billeter",
 	"Jack Jia",
 	"Jacob Berkman",
 	"Jaka Mocnik",
@@ -296,35 +299,42 @@ static const char *authors[] = {
 	"Jean-Noel Guiheneuf",
 	"Jeff Garzik",
 	"Jeffrey Stedfast",
+	"Jens Seidel",
 	"Jeremy Katz",
 	"Jeremy Wise",
 	"Jerome Lacoste",
-	"Jes\xC3\xBA" "s Bravo \xC3\x81" "lvarez",
 	"Jesse Pavel",
 	"Jesus Bravo Alvarez",
+	"Jes\xC3\xBA" "s Bravo \xC3\x81" "lvarez",
+	"J.H.M. Dassen (Ray)",
 	"Ji Lee",
 	"Joan Sanfeliu",
 	"Jody Goldberg",
 	"Joe Shaw",
 	"John Gotts",
-	"Jon K Hellan",
-	"Jon Oberheide",
-	"Jon Trowbridge",
 	"Jonas Borgstr",
 	"Jonas Borgstr",
 	"Jonathan Blandford",
 	"Jonathan Dieter",
+	"Jon K Hellan",
+	"Jon Oberheide",
+	"Jon Trowbridge",
 	"Jos Dehaes",
+	"JP Rosevear",
 	"Jukka Zitting",
 	"Julian Missig",
 	"Julio M. Merino Vidal",
+	"J\xC3\xBC" "rg Billeter",
 	"Karl Eichwalder",
 	"Karsten Br\xC3\xA4" "ckelmann",
+	"Kaushal Kumar",
 	"Kenneth Christiansen",
 	"Kenny Graunke",
 	"Kevin Breit",
+	"Khasim Shaheed",	
 	"Kidd Wang",
 	"Kjartan Maraas",
+	"Krishnan R",
 	"Krisztian Pifko",
 	"Larry Ewing",
 	"Laurent Dhima",
@@ -352,17 +362,17 @@ static const char *authors[] = {
 	"Mathieu Lacage",
 	"Matias Mutchinick",
 	"Matt Bissiri",
-	"Matt Martin",
-	"Matt Wilson",
 	"Matthew Loper",
 	"Matthew Wilson",
+	"Matt Martin",
+	"Matt Wilson",
 	"Max Horn",
 	"Maxx Cao",
 	"Meilof Veeningen",
 	"Mengjie Yu",
-	"Michael M. Morrison",
 	"Michael MacDonald",
 	"Michael Meeks",
+	"Michael M. Morrison",
 	"Michael Terry",
 	"Michael Zucchi",
 	"Michel Daenzer",
@@ -382,26 +392,28 @@ static const char *authors[] = {
 	"Nike Gerdts",
 	"Nuno Ferreira",
 	"Owen Taylor",
-	"P Chenthill",
 	"Pablo Gonzalo del Campo",
 	"Pablo Saratxaga",
 	"Pamplona Hackers",
 	"Paolo Molaro",
-	"Parthasarathi S A",
+	"Parag Goel",
 	"Parthasarathi Susarla",
 	"Pavel Cisler",
 	"Pavel Roskin",
+	"Peteris Krisjanis",
 	"Peter Pouliot",
 	"Peter Teichman",
 	"Peter Williams",
-	"Peteris Krisjanis",
 	"Petta Pietikainen",
 	"Phil Goembel",
 	"Philip Van Hoof",
 	"Philip Zhao",
+	"Poornima Nayak",
 	"Pratik V. Parikh",
+	"Praveen Kumar",
 	"Priit Laes",
 	"Priyanshu Raj",
+	"P.S.Chakravarthi",
 	"Radek Doul\xC3\xADk",
 	"Raja R Harinath",
 	"Ramiro Estrugo",
@@ -421,8 +433,6 @@ static const char *authors[] = {
 	"Runa Bhattacharjee",
 	"Russell Steinthal",
 	"Ryan P. Skadberg",
-	"S N Tejasvi",
-	"S.\xc3\x87" "a\xc4\x9f" "lar Onur",
 	"Sam Creasey",
 	"Sam\xC3\xBA" "el J\xC3\xB3" "n Gunnarsson",
 	"Sankar P",
@@ -437,15 +447,22 @@ static const char *authors[] = {
 	"Sergey Panov",
 	"Seth Alves",
 	"Seth Nickell",
+	"Shakti Sen",
+	"Shilpa C",
+	"Shreyas Srinivasan",
 	"Simos Xenitellis",
 	"Sivaiah Nallagatla",
+	"S N Tejasvi",
+	"Srinivasa Ragavan",
 	"Stanislav Brabec",
 	"Stanislav Visnovsky",
 	"Steve Murphy",
 	"Steven Zhang",
 	"Stuart Parmenter",
+	"Subodh Soni",
 	"Suresh Chandrasekharan",
 	"Sushma Rai",
+	"S.\xc3\x87" "a\xc4\x9f" "lar Onur",
 	"Szabolcs Ban",
 	"Takayuki KUSANO",
 	"Takeshi AIHANA",
@@ -454,27 +471,30 @@ static const char *authors[] = {
 	"Theppitak Karoonboonyanan",
 	"Thomas Cataldo",
 	"Thomas Mirlacher",
-	"Tim Wo",
 	"Timo Sirainen",
 	"Timothy Lee",
 	"Timur Bakeyev",
-	"T\xC3\xB5" "ivo Leedj\xC3\xA4" "rv",
-	"Tom Tromey",
+	"Tim Wo",
 	"Tomas Ogren",
 	"Tomasz K\xC3\x85" "oczko",
 	"Tomislav Vujec",
+	"Tom Tromey",
 	"Tony Tsui",
+	"Tor Lillqvist",
 	"Trent Lloyd",
 	"Tuomas J. Lukka",
 	"Tuomas Kuosmanen",
-	"Umesh Tiwari",
+	"T\xC3\xB5" "ivo Leedj\xC3\xA4" "rv",
 	"Umeshtej",
-	"V Ravi Kumar Raju",
+	"Umesh Tiwari",
 	"Vadim Strizhevsky",
 	"Valek Filippov",
 	"Vardhman Jain",
+	"Veerapuram Varadhan",
+	"Viren",
 	"Vivek Jain",
 	"Vladimir Vukicevic",
+	"V Ravi Kumar Raju",
 	"Wang Jian",
 	"Wayne Davis",
 	"William Jon McCann",
@@ -491,6 +511,7 @@ static const char *authors[] = {
 static const char *documentors[] = { 
 	"Aaron Weber",
 	"David Trowbridge",
+	"Jessica Prabhakar",
 	NULL
 };
 
